i have added new .env file to secure the confidential data like id password. and also mark .env file ignore.

--- a/.gitignore
+++ b/.gitignore
@@ -21,7 +21,7 @@ target/
 
 #Ignore the profile-image directory.
 /src/main/resources/profile-images
-
+.env
 
 ### NetBeans ###
 /nbproject/private/
