--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,9 +26,9 @@ file.upload.path=src/main/resources/profile-images
 # SMTP Configuration for Gmail
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=ankitsharma.as420@gmail.com
+spring.mail.username=${USER_EMAIL}
 # Use App Password, not the actual password
-spring.mail.password=fpnoveerqlksvmdg
+spring.mail.password=${EMAIL_PASSWORD}
 
 # Enable TLS
 spring.mail.properties.mail.smtp.auth=true
